Fix links to frontend labs

--- a/public/index.html
+++ b/public/index.html
@@ -22,25 +22,25 @@
 
   <ul>
     <li>
-      <a href="ITMO-WEB/Lab1/SoftwareDeveloper.html">Работа 1</a>
+      <a href="https://kalkolay.github.io/ITMO-WEB/Lab1/SoftwareDeveloper.html">Работа 1</a>
     </li>
     <li>
-      <a href="ITMO-WEB/Lab2/SoftwareDeveloper.html">Работа 2</a>
+      <a href="https://kalkolay.github.io/ITMO-WEB/Lab2/SoftwareDeveloper.html">Работа 2</a>
     </li>
     <li>
-      <a href="ITMO-WEB/Lab3/SoftwareDeveloper.html">Работа 3</a>
+      <a href="https://kalkolay.github.io/ITMO-WEB/Lab3/SoftwareDeveloper.html">Работа 3</a>
     </li>
     <li>
-      <a href="ITMO-WEB/Lab4/SoftwareDeveloper.html">Работа 4</a>
+      <a href="https://kalkolay.github.io/ITMO-WEB/Lab4/SoftwareDeveloper.html">Работа 4</a>
     </li>
     <li>
-      <a href="ITMO-WEB/Lab5/SoftwareDeveloper.html">Работа 5</a>
+      <a href="https://kalkolay.github.io/ITMO-WEB/Lab5/SoftwareDeveloper.html">Работа 5</a>
     </li>
     <li>
-      <a href="ITMO-WEB/Lab6/SoftwareDeveloper.html">Работа 6</a>
+      <a href="https://kalkolay.github.io/ITMO-WEB/Lab6/SoftwareDeveloper.html">Работа 6</a>
     </li>
     <li>
-      <a href="ITMO-WEB/Lab7/SoftwareDeveloper.html">Работа 7</a> &emsp;&lt;- <em>содержит актуальные правки по всем работам</em>
+      <a href="https://kalkolay.github.io/ITMO-WEB/Lab7/SoftwareDeveloper.html">Работа 7</a> &emsp;&lt;- <em>содержит актуальные правки по всем работам</em>
     </li>
   </ul>
 
